--- a/VeloMax/MVVM/View/CustomerView.xaml
+++ b/VeloMax/MVVM/View/CustomerView.xaml
@@ -1,10 +1,9 @@
-﻿<UserControl x:Class="VeloMax.MVVM.View.BikeView"
+﻿<UserControl x:Class="VeloMax.MVVM.View.CustomerView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:VeloMax.MVVM.View" 
-             xmlns:viewmodel="clr-namespace:VeloMax.MVVM.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:BikeViewModel}"
+             xmlns:local="clr-namespace:VeloMax.MVVM.View"
              mc:Ignorable="d" 
              d:DesignHeight="800" d:DesignWidth="1000">
     <StackPanel>
@@ -26,7 +25,7 @@
                     CornerRadius="10">
                 <ScrollViewer HorizontalScrollBarVisibility="Disabled"
                               VerticalScrollBarVisibility="Auto">
-                    <ItemsControl ItemsSource="{Binding Bikes}">
+                    <ItemsControl ItemsSource="{Binding Customers}">
                         <ItemsControl.ItemTemplate>
                             <DataTemplate>
                                 <Border Width="580"
@@ -37,8 +36,8 @@
                                         <Style TargetType="Border">
                                             <Setter Property="Background" Value="white"/>
                                             <Style.Triggers>
-                                                <DataTrigger Binding="{Binding Stock}" Value="0">
-                                                    <Setter Property="Background" Value="#F5E0DC"/>
+                                                <DataTrigger Binding="{Binding Type}" Value="entreprise">
+                                                    <Setter Property="Background" Value="#B5E8E0"/>
                                                 </DataTrigger>
                                             </Style.Triggers>
                                         </Style>
@@ -46,37 +45,27 @@
                                     <StackPanel Orientation="Horizontal"
                                             HorizontalAlignment="Stretch"
                                             VerticalAlignment="Stretch">
-                                        <TextBlock Text="{Binding Name}"
+                                        <TextBlock Foreground="#161320"
+                                                   Padding="5"
+                                                   FontSize="14"
+                                                   Margin="10">
+                                            <TextBlock.Style>
+                                                <Style TargetType="TextBlock">
+                                                    <Setter Property="Text" Value="{Binding Customer_fullname}"/>
+                                                    <Style.Triggers>
+                                                        <DataTrigger Binding="{Binding Type}" Value="entreprise">
+                                                            <Setter Property="Text" Value="{Binding Company_name}"/>
+                                                        </DataTrigger>
+                                                    </Style.Triggers>
+                                                </Style>
+                                            </TextBlock.Style>
+                                        </TextBlock>
+                                        <TextBlock Text="{Binding Mail}"
                                                    Foreground="#161320"
                                                    Padding="5"
                                                    FontSize="14"
                                                    Margin="10"/>
-                                        <TextBlock Text="{Binding Size}"
-                                                   Foreground="#161320"
-                                                   Padding="5"
-                                                   FontSize="14"
-                                                   Margin="10"/>
-                                        <TextBlock Text="{Binding Price}"
-                                                   Foreground="#161320"
-                                                   Padding="5"
-                                                   FontSize="14"
-                                                   Margin="10"/>
-                                        <TextBlock Text="{Binding Type}"
-                                                   Foreground="#161320"
-                                                   Padding="5"
-                                                   FontSize="14"
-                                                   Margin="10"/>
-                                        <TextBlock Text="{Binding Date_start}"
-                                                   Foreground="#161320"
-                                                   Padding="5"
-                                                   FontSize="14"
-                                                   Margin="0,10,0,0"/>
-                                        <TextBlock Text="{Binding Date_end}"
-                                                   Foreground="#161320"
-                                                   Padding="5"
-                                                   FontSize="14"
-                                                   Margin="0,10,0,0"/>
-                                        <TextBlock Text="{Binding Stock}"
+                                        <TextBlock Text="{Binding Fidelity_program}"
                                                    Foreground="#161320"
                                                    Padding="5"
                                                    FontSize="14"
@@ -103,4 +92,3 @@
 
     </StackPanel>
 </UserControl>
-
