--- a/VeloMax/MVVM/View/PartView.xaml
+++ b/VeloMax/MVVM/View/PartView.xaml
@@ -1,10 +1,9 @@
-﻿<UserControl x:Class="VeloMax.MVVM.View.BikeView"
+﻿<UserControl x:Class="VeloMax.MVVM.View.PartView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:VeloMax.MVVM.View" 
-             xmlns:viewmodel="clr-namespace:VeloMax.MVVM.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:BikeViewModel}"
+             xmlns:local="clr-namespace:VeloMax.MVVM.View" xmlns:viewmodel="clr-namespace:VeloMax.MVVM.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:PartViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="800" d:DesignWidth="1000">
     <StackPanel>
@@ -26,18 +25,19 @@
                     CornerRadius="10">
                 <ScrollViewer HorizontalScrollBarVisibility="Disabled"
                               VerticalScrollBarVisibility="Auto">
-                    <ItemsControl ItemsSource="{Binding Bikes}">
+                    <ItemsControl ItemsSource="{Binding Parts}">
                         <ItemsControl.ItemTemplate>
                             <DataTemplate>
                                 <Border Width="580"
                                     Height="50"
+                                    Background="white"
                                     CornerRadius="10"
                                     Margin="0,10,0,0">
                                     <Border.Style>
                                         <Style TargetType="Border">
                                             <Setter Property="Background" Value="white"/>
                                             <Style.Triggers>
-                                                <DataTrigger Binding="{Binding Stock}" Value="0">
+                                                <DataTrigger Binding="{Binding Quantity}" Value="0">
                                                     <Setter Property="Background" Value="#F5E0DC"/>
                                                 </DataTrigger>
                                             </Style.Triggers>
@@ -46,22 +46,17 @@
                                     <StackPanel Orientation="Horizontal"
                                             HorizontalAlignment="Stretch"
                                             VerticalAlignment="Stretch">
-                                        <TextBlock Text="{Binding Name}"
+                                        <TextBlock Text="{Binding Label}"
                                                    Foreground="#161320"
                                                    Padding="5"
                                                    FontSize="14"
                                                    Margin="10"/>
-                                        <TextBlock Text="{Binding Size}"
+                                        <TextBlock Text="{Binding Part_type}"
                                                    Foreground="#161320"
                                                    Padding="5"
                                                    FontSize="14"
                                                    Margin="10"/>
                                         <TextBlock Text="{Binding Price}"
-                                                   Foreground="#161320"
-                                                   Padding="5"
-                                                   FontSize="14"
-                                                   Margin="10"/>
-                                        <TextBlock Text="{Binding Type}"
                                                    Foreground="#161320"
                                                    Padding="5"
                                                    FontSize="14"
@@ -76,7 +71,7 @@
                                                    Padding="5"
                                                    FontSize="14"
                                                    Margin="0,10,0,0"/>
-                                        <TextBlock Text="{Binding Stock}"
+                                        <TextBlock Text="{Binding Quantity}"
                                                    Foreground="#161320"
                                                    Padding="5"
                                                    FontSize="14"
@@ -103,4 +98,3 @@
 
     </StackPanel>
 </UserControl>
-
