--- a/VeloMax/MVVM/View/CustomerView.xaml
+++ b/VeloMax/MVVM/View/CustomerView.xaml
@@ -12,7 +12,16 @@
                    HorizontalAlignment="Left"
                    FontSize="24"
                    Margin="25,0,0,20"/>
+        <RadioButton Margin="-320,-46,338,44"
+                    Background="Transparent"
+                    BorderThickness="0"
+                    Width="22"
+                     Style="{StaticResource HomeViewButtonTheme}"
+                     Command="{Binding CustomerViewRefresh}">
+
+        </RadioButton>
         <Border Height="110">
+
             <TextBlock
                 Text="listing attributes"
                 Foreground="White"
@@ -22,61 +31,14 @@
             <Border Width="600"
                     Height="600"
                     Margin="30,0,0,0"
-                    CornerRadius="10">
+                    CornerRadius="10">  
                 <ScrollViewer HorizontalScrollBarVisibility="Disabled"
                               VerticalScrollBarVisibility="Auto">
-                    <ItemsControl ItemsSource="{Binding Customers}">
-                        <ItemsControl.ItemTemplate>
-                            <DataTemplate>
-                                <Border Width="580"
-                                    Height="50"
-                                    CornerRadius="10"
-                                    Margin="0,10,0,0">
-                                    <Border.Style>
-                                        <Style TargetType="Border">
-                                            <Setter Property="Background" Value="white"/>
-                                            <Style.Triggers>
-                                                <DataTrigger Binding="{Binding Type}" Value="entreprise">
-                                                    <Setter Property="Background" Value="#B5E8E0"/>
-                                                </DataTrigger>
-                                            </Style.Triggers>
-                                        </Style>
-                                    </Border.Style>
-                                    <StackPanel Orientation="Horizontal"
-                                            HorizontalAlignment="Stretch"
-                                            VerticalAlignment="Stretch">
-                                        <TextBlock Foreground="#161320"
-                                                   Padding="5"
-                                                   FontSize="14"
-                                                   Margin="10">
-                                            <TextBlock.Style>
-                                                <Style TargetType="TextBlock">
-                                                    <Setter Property="Text" Value="{Binding Customer_fullname}"/>
-                                                    <Style.Triggers>
-                                                        <DataTrigger Binding="{Binding Type}" Value="entreprise">
-                                                            <Setter Property="Text" Value="{Binding Company_name}"/>
-                                                        </DataTrigger>
-                                                    </Style.Triggers>
-                                                </Style>
-                                            </TextBlock.Style>
-                                        </TextBlock>
-                                        <TextBlock Text="{Binding Mail}"
-                                                   Foreground="#161320"
-                                                   Padding="5"
-                                                   FontSize="14"
-                                                   Margin="10"/>
-                                        <TextBlock Text="{Binding Fidelity_program}"
-                                                   Foreground="#161320"
-                                                   Padding="5"
-                                                   FontSize="14"
-                                                   Margin="10"/>
-                                    </StackPanel>
+                    <DataGrid x:Name="BikesGrid"
+                              IsReadOnly= "True"
+                              ItemsSource="{Binding Customers}" Background="#FFD6D6D6" BorderBrush="#FFD7EBFF">
 
-                                </Border>
-
-                            </DataTemplate>
-                        </ItemsControl.ItemTemplate>
-                    </ItemsControl>
+                    </DataGrid>
                 </ScrollViewer>
             </Border>
             <Border Width="280"
