--- a/VeloMax/MainWindow.xaml
+++ b/VeloMax/MainWindow.xaml
@@ -1,4 +1,5 @@
 ﻿<Window x:Class="VeloMax.MainWindow"
+        x:Name="window"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -11,17 +12,20 @@
         WindowStyle="None"
         Background="Transparent"
         AllowsTransparency="True">
-
     <Window.DataContext>
         <viewModel:MainViewModel/>
     </Window.DataContext>
+    <Window.CommandBindings>
+        <CommandBinding Command="ApplicationCommands.Close"
+                        Executed="CloseCommandHandler"/>
+    </Window.CommandBindings>
 
-    <Border Background="#EAF6FA"
+<Border Background="#EAF6FA"
             CornerRadius="20"
             MouseDown="Border_MouseDown">
 
         <Grid>
-            
+
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="200"/>
                 <ColumnDefinition/>
@@ -81,7 +85,18 @@
                             Grid.Column="1"
                             Margin="10"
                             Content="{Binding _CurrentView}"/>
-            
+            <Button     
+            Command="ApplicationCommands.Close" Margin="956,0,0,760" 
+            Background="#FFE26464" 
+            RenderTransformOrigin="1,0"
+            Width="20"
+            Height="20" Grid.Column="1">
+                <Button.Resources>
+                    <Style TargetType="{x:Type Border}">
+                        <Setter Property="CornerRadius" Value="50"/>
+                    </Style>
+                </Button.Resources>
+            </Button>
         </Grid>
     </Border>
 </Window>
