--- a/VeloMax/MVVM/View/PartView.xaml
+++ b/VeloMax/MVVM/View/PartView.xaml
@@ -25,64 +25,12 @@
                     CornerRadius="10">
                 <ScrollViewer HorizontalScrollBarVisibility="Disabled"
                               VerticalScrollBarVisibility="Auto">
-                    <ItemsControl ItemsSource="{Binding Parts}">
-                        <ItemsControl.ItemTemplate>
-                            <DataTemplate>
-                                <Border Width="580"
-                                    Height="50"
-                                    Background="white"
-                                    CornerRadius="10"
-                                    Margin="0,10,0,0">
-                                    <Border.Style>
-                                        <Style TargetType="Border">
-                                            <Setter Property="Background" Value="white"/>
-                                            <Style.Triggers>
-                                                <DataTrigger Binding="{Binding Quantity}" Value="0">
-                                                    <Setter Property="Background" Value="#F5E0DC"/>
-                                                </DataTrigger>
-                                            </Style.Triggers>
-                                        </Style>
-                                    </Border.Style>
-                                    <StackPanel Orientation="Horizontal"
-                                            HorizontalAlignment="Stretch"
-                                            VerticalAlignment="Stretch">
-                                        <TextBlock Text="{Binding Label}"
-                                                   Foreground="#161320"
-                                                   Padding="5"
-                                                   FontSize="14"
-                                                   Margin="10"/>
-                                        <TextBlock Text="{Binding Part_type}"
-                                                   Foreground="#161320"
-                                                   Padding="5"
-                                                   FontSize="14"
-                                                   Margin="10"/>
-                                        <TextBlock Text="{Binding Price}"
-                                                   Foreground="#161320"
-                                                   Padding="5"
-                                                   FontSize="14"
-                                                   Margin="10"/>
-                                        <TextBlock Text="{Binding Date_start}"
-                                                   Foreground="#161320"
-                                                   Padding="5"
-                                                   FontSize="14"
-                                                   Margin="0,10,0,0"/>
-                                        <TextBlock Text="{Binding Date_end}"
-                                                   Foreground="#161320"
-                                                   Padding="5"
-                                                   FontSize="14"
-                                                   Margin="0,10,0,0"/>
-                                        <TextBlock Text="{Binding Quantity}"
-                                                   Foreground="#161320"
-                                                   Padding="5"
-                                                   FontSize="14"
-                                                   Margin="10"/>
-                                    </StackPanel>
-
-                                </Border>
-
-                            </DataTemplate>
-                        </ItemsControl.ItemTemplate>
-                    </ItemsControl>
+                    <DataGrid x:Name="BikesGrid"
+                              IsReadOnly= "True"
+                              ItemsSource="{Binding Parts}"
+                              Background="Transparent"
+                              BorderThickness="0">
+                    </DataGrid>
                 </ScrollViewer>
             </Border>
             <Border Width="280"
